update: Fix bugs in code
