# app/routes/app.js
@@ -10,6 +10,7 @@ appRouter.get('/stats', AppController.getStats);
 
 appRouter.post('/files/', AppController.uploadFile);
 appRouter.get('/files/:categoryId/:entityId', AppController.getFiles)
+appRouter.get('/files/:categoryId/:entityId/:fileName/open', AppController.openFile);
 appRouter.get('/files/:categoryId/:entityId/:fileName', AppController.downloadFile);
 
 export default appRouter;
