# openapi.yaml
@@ -12,7 +12,8 @@ info:
         description: Bearer token for authentication
 
 servers:
-  - url: http://localhost:3000/api
+  - url: http://localhost:3000/evoting/api/v1
+    description: Development server
 
 paths:
   /users:
@@ -722,6 +723,36 @@ paths:
   /app/files/{category}/{entityId}/{fileName}:
     get:
       summary: Downloads a specific file
+      tags: [Files]
+      parameters:
+        - in: path
+          name: category
+          required: true
+          schema:
+            type: string
+          description: The category of the file
+        - in: path
+          name: entityId
+          required: true
+          schema:
+            type: string
+          description: The ID of the entity
+        - in: path
+          name: fileName
+          required: true
+          schema:
+            type: string
+          description: The name of the file
+      responses:
+        '200':
+          description: File downloaded successfully
+        '404':
+          description: File not found
+        '500':
+          description: Internal server error
+/app/files/{category}/{entityId}/{fileName}/open:
+    get:
+      summary: Opens a specific file
       tags: [Files]
       parameters:
         - in: path
